--- a/src/app/contact/contact-list-item/contact-list-item.component.html
+++ b/src/app/contact/contact-list-item/contact-list-item.component.html
@@ -1,3 +1,4 @@
-<p>
-  contact-list-item works!
-</p>
+<div>
+  <img [src]="'http://unsplash.it/75?' + contact.name" alt="">
+  <h1>{{contact.name.first + ' ' + contact.name.last }}</h1>
+</div>
