--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -1,1 +1,3 @@
-<app-contact-list-item></app-contact-list-item>
+<app-contact-list-item *ngFor="let contact of contactList" [contact]="contact"></app-contact-list-item>
+
+
