--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~angular-vertical-timeline/dist/vertical-timeline.css";
+
+.timeline-content{
+    float:right;
+}
+
+.timeline-content .date{
+    right:0!important;
+}
